--- a/.circleci/main/parameters.yml
+++ b/.circleci/main/parameters.yml
@@ -24,11 +24,11 @@ parameters:
   next_branch:
     description: the auto-merge target branch
     type: string
-    default: release-33.x
+    default: foundation-2024
   next_branch_label:
     description: the auto-merge target branch (escaped, no slashes)
     type: string
-    default: release-33.x
+    default: foundation-2024
 
   ### sub-tree "module" build setup ###
   trigger-docs:
