--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ aliases:
           MINION_IMAGE_VERSION="${CIRCLE_BRANCH//\//-}"
           ;;
       esac
-      echo "export DOCKER_CONTENT_TRUST=1" >> $BASH_ENV
+      # echo "export DOCKER_CONTENT_TRUST=1" >> $BASH_ENV
       echo "export DOCKER_CONTENT_TRUST_REPOSITORY_PASSPHRASE=\"$DCT_DELEGATE_KEY_PASSPHRASE\"" >> $BASH_ENV
       echo "export MINION_IMAGE=docker.io/opennms/minion" >> $BASH_ENV
       echo "export MINION_IMAGE_VERSION=\"$MINION_IMAGE_VERSION\"" >> $BASH_ENV
@@ -1331,8 +1331,8 @@ jobs:
             sudo chmod a+x /usr/local/bin/docker-buildx
             sudo systemctl restart docker
       - dockerhub-login
-      # - run: *setup_dct_env
-      # - run: *setup_dct_key
+      - run: *setup_dct_env
+      - run: *setup_dct_key
       - run:
           name: Single-arch build & push
           command: |
@@ -1356,8 +1356,8 @@ jobs:
       - attach_workspace:
           at: ~/
       - dockerhub-login
-      # - run: *setup_dct_env
-      # - run: *setup_dct_key
+      - run: *setup_dct_env
+      - run: *setup_dct_key
       - run:
           name: Install notary
           command: |
