--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     directory: "/ui"
     target-branch: "release-33.x"
     reviewers:
-      - "synqotik"
+      - "OpenNMS/dependabot-reviewers-node"
     labels:
       - "dependency update"
     commit-message:
@@ -28,7 +28,7 @@ updates:
     target-branch: "foundation-2023"
     versioning-strategy: "increase-if-necessary"
     reviewers:
-      - "rangerrick"
+      - "OpenNMS/dependabot-reviewers-node"
     labels:
       - "dependency update"
     commit-message:
@@ -81,7 +81,7 @@ updates:
     directory: "/"
     target-branch: "foundation-2023"
     reviewers:
-      - "rangerrick"
+      - "OpenNMS/dependabot-reviewers-maven"
     labels:
       - "dependency update"
     commit-message:
