--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/ui"
-    target-branch: "release-33.x"
+    target-branch: "foundation-2024"
     reviewers:
       - "OpenNMS/dependabot-reviewers-node"
     labels:
