--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -39,6 +39,7 @@
     <module>jrrd</module>
     <module>jrrd2</module>
     <module>jstl</module>
+    <module>jung</module>
     <module>liquibase</module>
     <module>mina</module>
     <module>netty</module>
