--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -851,4 +851,5 @@ org.opennms.newts.nan_on_counter_wrap=true
 # By default this option is disabled.
 # org.opennms.features.telemetry.ingressAndEgressRequired=false
 
-
+# Additional control characters that will be treated as displayable in octet strings.
+org.opennms.netmgt.snmp.additionalPrintableCharacters=0x0a,0x11
