NMS-16395: Allow mapping of characters

--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -852,4 +852,12 @@ org.opennms.newts.nan_on_counter_wrap=true
 # org.opennms.features.telemetry.ingressAndEgressRequired=false
 
 # Additional control characters that will be treated as displayable in octet strings.
-org.opennms.netmgt.snmp.additionalPrintableCharacters=0x0a,0x11
+# Example: to allow the characters LF and DC1 use a comma-separated list like "0x0a,0x11"
+# By default no additional characters are set.
+# org.opennms.netmgt.snmp.additionalPrintableCharacters=
+
+# Characters that will be mapped to other characters in octet strings.
+# Example: to map LF->SPACE and the character E->X use a comma-separated list of mappings like "0x0a:0x20,0x45:0x58"
+# By default no mappings are defined
+# org.opennms.netmgt.snmp.mappedCharacters=
+
