chg: remove ksc reports

--- a/opennms-webapp/src/test/resources/etc/snmp-graph.properties
+++ b/opennms-webapp/src/test/resources/etc/snmp-graph.properties
@@ -10,6 +10,7 @@ command.prefix=/opt/local/bin/rrdtool graph - --imgformat PNG --font DEFAULT:7 -
 info.command=/opt/local/bin/rrdtool info
 
 #The default graph for KSC node and domain reports
+# TODO MVR this can go I think as it is no longer used/required
 default.report=mib2.HCbits
 
 #the output type of the image, should correspond to the type we
