feat: allow for faster turn-round times when developing the ui

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "license": "AGPL v3",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --base=/opennms/ui",
     "build": "vue-tsc --noEmit && vite build --base=/opennms/ui/",
     "build:dev": "vue-tsc --noEmit && vite build --base=/opennms/ui/ --minify false",
     "watch": "vue-tsc --noEmit && vite build --base=/opennms/ui/ --watch",
     "watch:dev": "vue-tsc --noEmit && vite build --base=/opennms/ui/ --minify false --watch",
-    "serve": "vite preview",
+    "serve": "vite preview --base=/opennms/ui",
     "test": "vitest run",
     "lint": "eslint --ignore-path ../.gitignore --ext .ts,.vue .",
     "lint:fix": "eslint --ignore-path ../.gitignore --ext .ts,.vue . --fix",
