--- a/core/test-api/db/pom.xml
+++ b/core/test-api/db/pom.xml
@@ -87,6 +87,19 @@
     </dependency>
     <!-- test dependencies -->
     <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>${liquibaseVersion}</version>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>groovy-dependencies</artifactId>
       <type>pom</type>
