--- a/dependencies/liquibase/pom.xml
+++ b/dependencies/liquibase/pom.xml
@@ -9,7 +9,7 @@
   <groupId>org.opennms.dependencies</groupId>
   <artifactId>liquibase-dependencies</artifactId>
   <packaging>pom</packaging>
-  <name>OpenNMS :: Dependencies :: Liquibase</name>
+  <name>OpenNMS :: Dependencies :: LiquiBase</name>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -30,10 +30,6 @@
         <exclusion>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
