NMS-16332: Added descriptors

--- a/features/minion/core/repository/pom.xml
+++ b/features/minion/core/repository/pom.xml
@@ -29,6 +29,7 @@
                                 <!-- Default repositories -->
                                 <descriptor>mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features</descriptor>
                                 <descriptor>mvn:org.opennms.karaf/opennms/${project.version}/xml/spring-legacy</descriptor>
+                                <descriptor>mvn:org.apache-extras.camel-extra.karaf/camel-extra/RELEASE/xml/features</descriptor>
                                 <!-- Add Minion features -->
                                 <descriptor>mvn:org.opennms.features.minion/core-features/${project.version}/xml</descriptor>
                                 <!-- Add OpenNMS features -->
